@@ -28,8 +28,8 @@ CC_PIECES=
 CC_FILES=$(CC_PIECES:%=%.cc)
 CC_O_FILES=$(CC_PIECES:%=${ARCH}/%.o)
 
-H_FILES= drvLan9118.h lanIpBasic.h lanIpProto.h padProto.h udpComm.h  padStream.h lanIpBasicTest.h drvUdpSock.h
-INST_HEADERS= drvLan9118.h lanIpBasic.h lanIpProto.h padProto.h udpComm.h padStream.h lanIpBasicTest.h drvUdpSock.h
+H_FILES= drvLan9118.h lanIpBasic.h lanIpProto.h padProto.h udpComm.h  padStream.h lanIpBasicSetup.h drvUdpSock.h
+INST_HEADERS= drvLan9118.h lanIpBasic.h lanIpProto.h padProto.h udpComm.h padStream.h lanIpBasicSetup.h drvUdpSock.h
 
 # Assembly source names, if any, go here -- minus the .S
 S_PIECES=
