@@ -1,4 +1,5 @@
-2008/10/16 (TS):
+2008/10/17 (TS):
+ - renamed lanIpBasicTest.h -> lanIpBasicSetup.h
  - provide helper inlines (lanIpBasic.c) for drivers to manipulate
    unaligned IP addresses in ARP headers.
  - cleaned-up and documented the 'setup' api, i.e., routines the drivers
@@ -9,6 +10,7 @@
    device. We now read the 9118's EEPROM into a ram-shadow buffer
    when we start the device and transparently provide cached data
    to the user.
+2008/10/16 (TS):
  - do not access IP addresses inside of ARP packets as 32-bit entities
    because they are not properly aligned. Provided helper inline routines
    to do this (lanIpBasic.c).
